[package]
name = "gh-user-summary"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
fern = "0.7.1"
log = "0.4.27"
colored = "3.0.0"
serde_json = "1.0.140"
rayon = "1.10.0"
clap = { version = "4.5.35", features = ["derive"] }
cacache = "9.0.0"  # Simple disk cache
